--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         </div>
 
         <script src="lib/vue.js"></script>
+        <script src="lib/moment.js"></script>
         <script src="lib/socket.io.js"></script>
         <script src="lib/material.min.js"></script>
         <script src="lib/d3.js"></script>
