--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
 
                         </svg>
                     </div>
+
+                    <chart :data="data"></chart>
                 </div>
             </main>
         </div>
@@ -48,6 +50,10 @@
         <script src="lib/socket.io.js"></script>
         <script src="lib/material.min.js"></script>
         <script src="lib/d3.js"></script>
+
+        <!-- Components -->
+        <script src="js/components/chart.js"></script>
+
         <script src="js/main.js"></script>
     </body>
 </html>
