--- a/software/public/index.html
+++ b/software/public/index.html
@@ -48,6 +48,7 @@
         <!-- Components -->
         <script src="js/components/chart.js"></script>
 
+        <script src="js/collisionChecking.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
