Worked on collisions, added unit tests

--- a/software/public/index.html
+++ b/software/public/index.html
@@ -48,7 +48,7 @@
         <!-- Components -->
         <script src="js/components/chart.js"></script>
 
-        <script src="js/collisionChecking.js"></script>
+        <script src="js/collision.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
