--- a/software/public/index.html
+++ b/software/public/index.html
@@ -42,6 +42,7 @@
             <main class="mdl-layout__content">
                 <div v-show="currentTab == tabs.CHART" class="page-content">
                     <chart :data="data" :bus="bus"></chart>
+                    <data-card :bus="bus"></data-card>
                 </div>
 
                 <div v-show="currentTab == tabs.SETTINGS" class="page-content">
@@ -61,6 +62,7 @@
         <!-- Components -->
         <script src="js/components/chart.js"></script>
         <script src="js/components/settings.js"></script>
+        <script src="js/components/data-card.js"></script>
 
         <script src="js/collision.js"></script>
         <script src="js/main.js"></script>
