Worked on serial communication

--- a/software/public/index.html
+++ b/software/public/index.html
@@ -24,7 +24,7 @@
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
 
-                    <span v-if="isConnected" class="mdl-layout-title">Multimeter (connected)</span>
+                    <span v-if="isConnected" class="mdl-layout-title">Multimeter (connected to {{deviceName}})</span>
                     <span v-else class="mdl-layout-title">Multimeter (disconnected)</span>
                 </div>
 
