Implemented SD card logging from software

--- a/software/public/index.html
+++ b/software/public/index.html
@@ -50,6 +50,7 @@
                     <div class="flex-container">
                         <data-card :bus="bus"></data-card>
                         <collision-card :bus="bus"></collision-card>
+                        <sd-log-card :bus="bus"></sd-log-card>
                     </div>
                 </div>
 
@@ -74,6 +75,7 @@
         <!-- Components -->
         <script src="js/components/chart.js"></script>
         <script src="js/components/settings.js"></script>
+        <script src="js/components/sd-log-card.js"></script>
         <script src="js/components/data-card.js"></script>
         <script src="js/components/data-view.js"></script>
         <script src="js/components/delete-dialog.js"></script>
