Added button margin and implemented polyfill for dialog

--- a/software/public/index.html
+++ b/software/public/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="lib/material.blue_grey-red.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="lib/dialog-polyfill.css">
 
         <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -71,6 +72,7 @@
         <script src="lib/socket.io.js"></script>
         <script src="lib/material.min.js"></script>
         <script src="lib/d3.js"></script>
+        <script src="lib/dialog-polyfill.js"></script>
 
         <!-- Components -->
         <script src="js/components/chart.js"></script>
