Worked on software

--- a/software/public/index.html
+++ b/software/public/index.html
@@ -52,6 +52,7 @@
                         <data-card :bus="bus"></data-card>
                         <collision-card :bus="bus"></collision-card>
                         <sd-log-card :bus="bus"></sd-log-card>
+                        <sample-rate-card :bus="bus"></sample-rate-card>
                     </div>
                 </div>
 
@@ -78,6 +79,7 @@
         <script src="js/components/chart.js"></script>
         <script src="js/components/settings.js"></script>
         <script src="js/components/sd-log-card.js"></script>
+        <script src="js/components/sample-rate-card.js"></script>
         <script src="js/components/data-card.js"></script>
         <script src="js/components/data-view.js"></script>
         <script src="js/components/delete-dialog.js"></script>
